# youtube-video-retriever

./: .cursorignore  .gitignore  Makefile  README.md  ai_service.py  build_report.py  diet_insights.py  download_transcipts.py  main.py  process_report.py  pyproject.toml  requirements.txt  setup.cfg  test_api_keys.py
config/: config.yaml  content_model.json
examples/: basic_usage.py  custom_formatter.py  filter_videos.py  process_multiple_channels.py
output/: insights_report.md  insights_report_old.md  processed_insights_report.md
tests/: test_channel.py  test_video.py
transcripts/: (Part_II)_Supercentenarian_(112_-_116y)_Blood_Test_Analysis.md  13y_Younger_Biological_Age_(Blood_Test_#6_in_2024;_Test_#54_Since_2015).md  15_-_21_Younger_Biological_Age_Supplements,_Diet_(Blood_Test_#7_in_2023).md  15y_Younger_Biological_Age_(Blood_Test_#7_in_2024;_Test_#36_Since_2018).md  15y_Younger_Biological_Age_Meds,_Supplements,_Diet_(Blood_Test_#7_in_2024).md  16.1y_Younger_Biological_Age_(Blood_Test_#3_In_2024,_Test_#51_Since_2015).md  16_-_20y_Younger_Biological_Age_Supplements,_Diet_(Blood_Test_#4_in_2023).md  16y_Younger_Biological_Age_Supplements,_Diet_(Test_#3_in_2024).md  17.5y_Younger_Biological_Age_(Blood_Test_#4_In_2024,_Full_Lab_Test_Analysis).md  17.5y_Younger_Biological_Age_Supplements,_Diet_(Blood_Test_#4_in_2024).md  17.6y_Younger_Biological_Age_(Blood_Test_#5_In_2024).md  17.6y_Younger_Biological_Age_Supplements_(Blood_Test_#5_In_2024).md  17_-_23_Younger_Biological_Age_Supplements,_Diet_(Blood_Test_#6_in_2023).md  2x_Trigonelline_Increase_Impact_on_NAD.md  (+303 more)
(+11 files in other folders)
