[project]
name = "youtube-transcript-retriever"
version = "0.2.0"
description = "A blazing fast, parallel YouTube transcript retriever"
authors = [
    {name = "Elio Verhoef", email = "elioverhoef@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "scrapetube",
    "youtube-transcript-api",
    "requests",
    "tqdm"
]

[project.scripts]
youtube-transcripts = "youtube_transcript_retriever.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_transcript_retriever"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
