[metadata]
name = youtube-transcript-retriever
version = 0.2.0
description = A blazing fast, parallel YouTube transcript retriever
author = Elio Verhoef

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    scrapetube>=2.5.1
    youtube-transcript-api>=0.6.1
    requests>=2.31.0
    tqdm>=4.66.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    youtube-transcripts = youtube_transcript_retriever.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = True
strict = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=youtube_transcript_retriever